--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.15",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
@@ -70,5 +71,8 @@
   "ct3aMetadata": {
     "initVersion": "7.39.3"
   },
-  "packageManager": "npm@10.1.0"
+  "packageManager": "npm@10.1.0",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
